<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailUserActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:title="Detail User"
        app:titleTextColor="@android:color/white"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_loading"
        android:visibility="gone"
        android:layout_centerInParent="true"/>


    <RelativeLayout
        android:id="@+id/layout_data_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_detail"
        android:background="#101010">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_detail_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:src="@android:color/darker_gray" />
        <TextView
            android:id="@+id/tv_detail_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_detail_avatar"
            android:text="@string/detail_user_name"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"/>


        <TextView
            android:id="@+id/tv_detail_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/tv_detail_username"
            android:text="@string/detail_company"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            android:drawablePadding="5dp"
            android:layout_marginBottom="5dp"
            android:drawableStart="@drawable/ic_company" />
        <TextView
            android:id="@+id/tv_detail_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/tv_detail_company"
            android:text="@string/detail_location"
            android:textColor="#FFFFFF"
            android:drawablePadding="5dp"
            android:textSize="12sp"
            android:layout_marginBottom="5dp"
            android:drawableStart="@drawable/ic_location" />
        <TextView
            android:id="@+id/tv_detail_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/tv_detail_location"
            android:text="@string/detail_repository"
            android:textColor="#FFFFFF"
            android:drawablePadding="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="12sp"
            android:drawableStart="@drawable/ic_repo" />

        <TextView
            android:id="@+id/tv_detail_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/tv_detail_repo"
            android:text="@string/detail_followers"
            android:textColor="#FFFFFF"
            android:drawablePadding="5dp"
            android:layout_marginBottom="10dp"
            android:textSize="12sp"
            android:drawableStart="@drawable/ic_person" />


        <TextView
            android:id="@+id/tv_detail_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_detail_repo"
            android:layout_toEndOf="@+id/tv_detail_followers"
            android:text="@string/detail_following"
            android:layout_marginStart="10dp"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="10dp"
            android:textSize="12sp" />


        <com.google.android.material.tabs.TabLayout
            android:layout_below="@+id/tv_detail_following"
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:tabIndicatorColor="@android:color/white"
            app:tabTextColor="@android:color/white"/>

        <androidx.viewpager.widget.ViewPager
            android:layout_below="@+id/tabs"
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>



</RelativeLayout>